adjust button style after discussing with Josh. fix left margin spacing on workshops page that is problematic on mobile viewports

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -883,7 +883,7 @@ footer {
 
 .featured-speaker {
 	.copy-container {
-		//padding-left: 37px; //ZJ not sure why this was set 
+		//padding-left: 37px; //ZJ not sure why this was set
 	    padding-top: 95px;
 	}
 	.img-container {
@@ -963,7 +963,7 @@ footer {
 }
 .workshop-list {
   padding-top: 30px;
-  padding-left: 37px;
+  //padding-left: 37px;
   padding-bottom: 3em;
   max-width: 640px;
   h2 {
@@ -1004,20 +1004,15 @@ footer {
 
 // 'BUY TICKETS' button styles
 .btn {
-  background: #452E26;
-  background-image: -webkit-linear-gradient(top, #452E26, #917c51);
-  background-image: -moz-linear-gradient(top, #452E26, #917c51);
-  background-image: -ms-linear-gradient(top, #452E26, #917c51);
-  background-image: -o-linear-gradient(top, #452E26, #917c51);
-  background-image: linear-gradient(to bottom, #452E26, #917c51);
-  -webkit-border-radius: 5;
-  -moz-border-radius: 5;
-  border-radius: 5px;
+  background: $brand-brown;
+  font-family: NunitoSansLight, sans-serif;
+  border-radius: 0;
   font-family: Arial;
   color: $white-text;
   font-size: 20px;
-  padding: 10px 30px 10px 30px;
+  padding: 20px 30px 20px 30px;
   text-decoration: none;
+  text-transform: uppercase;
   border: 0;
 }
 
